Mon Sep  3 12:01:36 BST 2007  Colin Watson  <cjwatson@debian.org>

	* .bzrignore: Update for manual directory renaming.
	* GNUmakefile.in (nls_man): Likewise.

Mon Sep  3 11:56:58 BST 2007  Colin Watson  <cjwatson@debian.org>

	* man/de_DE.88591, man/es_ES.88591, man/fr_FR.88591,
	  man/it_IT.88591, man/ja_JP.eucJP: Rename to ...
	* man/de.UTF-8, man/es.UTF-8, man/fr.UTF-8, man/it.UTF-8,
	  man/ja.UTF-8: ... these. Recode all contents to UTF-8.
	* man/Makefile.in (NLS): Adjust directory search.
	* man/THANKS: Update credits.

Mon Sep  3 11:38:11 BST 2007  Colin Watson  <cjwatson@debian.org>

	Create and use databases for non-English manual hierarchies (Debian
	bug #29448). Extensive changes elsewhere to support this by means of
	better UTF-8 handling and knowledge of more languages.

	* src/check_mandirs.c (make_database_directory): New function.
	  (create_db, update_db): Use it.
	  (purge_missing): Check that the database exists before starting.
	* src/mandb.c (process_manpath): New function, split out from main.
	  Make the single_filename check aware that the file might be in a
	  per-locale subdirectory that we aren't processing right now.
	  (main): Use it. Move man_owner, purged, and strays to file scope.
	  Build databases for all per-locale subdirectories.
	* src/straycats.c (straycats): Constify manpath argument.
	* src/whatis.c (main): Sync locale handling with src/man.c, in order
	  to look up per-locale databases correctly. Based on a patch by
	  Nicolas François (Debian bug #281811).
	* include/manconfig.h.in (straycats): Update prototype.

	* src/man.c (duplicate_candidates): New function to determine
	  whether candidates are substantially duplicated, and if so in
	  which direction. The logic is better than before: it now knows how
	  to compare locales and pick the best available candidate for each
	  language, and prefers UTF-8 candidates if everything else is
	  equal.
	  (add_candidate): Move duplication logic to duplicate_candidates.